--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-users"></i>
-                        <span class="stat-number">500+</span>
+                        <span class="stat-number">700+</span>
                         <span class="stat-label">Usuarios</span>
                     </div>
                     <div class="stat-item">
@@ -440,7 +440,7 @@
             <p class="fade-in">Controla tu servidor Minecraft directamente desde Discord</p>
             <p class="fade-in">Gestiona jugadores, ejecuta comandos y mantén tu servidor bajo control sin salir de Discord</p>
             <a href="https://discord.com/oauth2/authorize?client_id=1138233578795319316&scope=bot&permissions=8" class="cta-button fade-in">
-                <i class="fas fa-plus-circle"></i> Agregar a Discord
+                <i class="fas fa-plus-circle" class="add-discord"></i> Agregar a Discord
             </a>
         </div>
     </section>
@@ -513,7 +513,7 @@
                         <li><i class="fas fa-check"></i> 2 comandos personalizados</li>
                         <li><i class="fas fa-check"></i> Soporte básico</li>
                     </ul>
-                    <a href="#" class="cta-button">Comenzar Gratis</a>
+                    <a href="https://discord.com/api/oauth2/authorize?client_id=1138233578795319316&permissions=8&scope=bot%20applications.commands" class="cta-button">Comenzar Gratis</a>
                 </div>
                 <div class="plan-card premium fade-in">
                     <div class="plan-badge">Recomendado</div>
@@ -529,7 +529,7 @@
                         <li><i class="fas fa-check"></i> Actualizaciones beta</li>
                         <li><i class="fas fa-check"></i> Panel web de administración</li>
                     </ul>
-                    <a href="#" class="cta-button">Obtener Premium</a>
+                    <a href="" class="cta-button">Contactame!</a>
                 </div>
             </div>
         </div>
@@ -572,6 +572,9 @@
                     <div class="command-name">/custom</div>
                     <p>Ejecuta comandos personalizados configurados</p>
                 </div>
+                <div class="command-item fade-in">
+                    <p>Y muchos más!</p>
+                </div>
             </div>
         </div>
     </section>
@@ -593,16 +596,15 @@
                 </div>
                 <div class="footer-section">
                     <h3>Soporte</h3>
-                    <a href="#">Discord Support</a>
-                    <a href="#">Ticket de soporte</a>
-                    <a href="#">Reportar un bug</a>
-                    <a href="#">Sugerir función</a>
+                    <a href="https://discord.gg/4b5h6WN2Ev">Discord Support</a>
+                    <a href="https://discord.gg/4b5h6WN2Ev">Ticket de soporte</a>
+                    <a href="suggest.html">Reportar un bug</a>
+                    <a href="suggest.html">Sugerir función</a>
                 </div>
                 <div class="footer-section">
                     <h3>Síguenos</h3>
-                    <a href="#"><i class="fab fa-discord"></i> Discord</a>
-                    <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                    <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="#"><i class="fab fa-discord"></i> Discord: Axxtrial</a>
+                    <a href="#"><i class="fab fa-github"></i> GitHub: axxtrial</a>
                 </div>
             </div>
             <div style="border-top: 1px solid #444; padding-top: 2rem; margin-top: 2rem;">
