--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Opside - Tu Bot de Moderación para Minecraft</title>
     <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/1138233578795319316/30a6f489e021fa5ff6206213335babc3.png?size=2048" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
@@ -20,7 +21,7 @@
                 <a href="#planes">Planes</a>
                 <a href="#contacto">Contacto</a>
             </div>
-            <a href="#" class="cta-button">Invitar Bot</a>
+            <a href="https://discord.com/oauth2/authorize?client_id=1138233578795319316&scope=bot&permissions=8" class="cta-button">Invitar Bot</a>
         </div>
     </nav>
 
@@ -30,8 +31,8 @@
             <p class="subtitle">Tu asistente de moderación para servidores Minecraft</p>
             <p class="description">Gestiona tu servidor Minecraft desde Discord de manera eficiente y segura</p>
             <div class="hero-buttons">
-                <a href="#" class="primary-button">Invitar Bot</a>
-                <a href="index.html" class="secondary-button">Ver Documentación</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=1138233578795319316&scope=bot&permissions=8" class="primary-button">Invitar Bot</a>
+                <a href="docs.html" class="secondary-button">Ver Documentación</a>
             </div>
         </div>
         <div class="hero-image">
@@ -93,7 +94,7 @@
                     <li><i class="fas fa-check"></i> Soporte prioritario 24/7</li>
                     <li><i class="fas fa-check"></i> Actualizaciones beta</li>
                 </ul>
-                <a href="#" class="pricing-button">Obtener Premium</a>
+                <a href="#contacto" class="pricing-button">Obtener Premium</a>
             </div>
         </div>
     </section>
@@ -131,9 +132,6 @@
                 <a href="https://discord.axxtrial.space"><i class="fab fa-discord"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Opside. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
