--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="pricing-card premium">
                 <div class="pricing-header">
                     <h3>Plan Premium</h3>
-                    <p class="price">$20<span>/3 meses</span></p>
+                    <p class="price">$5<span>/1 mes</span></p>
                 </div>
                 <ul class="pricing-features">
                     <li><i class="fas fa-check"></i> Todos los comandos gratuitos</li>
